# Book-Tracker

./: .coveragerc  .gitignore  Analytic_FunctionComplient  Analytic_FunctionRefactored  Analytic_FunctionRefactored.py  Analytic_Functions_Graph  Analytical_Functions.py  BRANCH_DELETION_INSTRUCTIONS.md  CRUD-Create.py  CRUD-Note.py  CRUD-Tag.py  CRUD_Delete_Books.py  CRUD_Delete_Note.py  CRUD_Full_Read.py  CRUD_Read.py  CRUD_Update.py  Case_Author.py  Create_Complete_ISBN_Book  Create_Complete_ISBN_Book.py  DDComplex_Create_Complete_ISBN_Book.py  Dockerfile  README.md  bt.db  cascade_CRUD_Delete_Books.py  cascade_CRUD_Delete_Note.py  create_db.py  create_dbRefactored.py  database_purge  genre_defaults.py  genre_inserts.sql  mock.db  pyproject.toml  render.yaml  requirements.txt  reset_Button  submit_Button  tree.txt  user.json  userProfileComplient.py  userProfileF.py  (+3 more)
DEPRECATE/: Analytic_FunctionRefactored.py  CRUD-Create.py  CRUD-Note.py  CRUD-Tag.py  CRUD_Delete_Books.py  CRUD_Delete_Note.py  CRUD_Full_Read.py  CRUD_Image.py  CRUD_Read.py  CRUD_Update.py  Case_Same_Book_Diff_ISBN.py  Create-Full-Book-Record  Finalize-Note-Backend.py  Joseph_sample_books.py  cache_search  create_db.py  create_dbRefactored.py  export_import  help_modal.html  purge_cover  run.py  settings.html  submit_Button  userSettingsF.py  user_Settings_Refactored.html
app/: __init__.py  init_db.py  main.py  mediator.py  test_route.py
book_tracker.egg-info/: PKG-INFO  SOURCES.txt
cli_app/: CRUD_Create.py  CRUD_Full_Read.py  CRUD_Read.py  CRUD_Read_re.py  bt.db  cli_app.py  cli_app_create.py  (+10 more)
(+272 files in other folders)
