[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-tracker"
version = "0.1.0"
dependencies = [
	"Flask>=3.0.0",
	"requests>=2.31.0",
]


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = [
	"templates/*.html",
	"templates/**/*.html",
	"static/css/*.css",
	"static/*.json",
	"static/images/*",
	"static/images/**/*",
	"data/*.json",
]
